--- a/TP4_RO.ipynb
+++ b/TP4_RO.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "readKnaptxtInstance (generic function with 1 method)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "solveSacADos (generic function with 1 method)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,21 +112,23 @@
     "    end\n",
     "            \n",
     "# Récurrence\n",
-    "    for i in 2:nbObjet\n",
-    "        \n",
-    "        solution_actuelle = deepcopy(solution_precedente)\n",
+    "    for i in 2:nbObjet      \n",
+    "        solution_actuelle = deepcopy(solution_precedente)  \n",
     "        \n",
     "        for j in 1:capacity\n",
+    "# Cas 1: l'objet peut rentrer dans le sac\n",
     "            if j-weight[i] >= 0 \n",
     "                if j-weight[i] == 0\n",
-    "\n",
+    "# Cas 1.1: le poid de l'objet i est exactement la capacité maximale du sac\n",
     "                    C[i,j] = max(C[i-1,j], price[i])\n",
+    "# Si on ne prend pas l'objet i, la solution ne change pas. Sinon on ne prend que l'objet i.\n",
     "                    if max(C[i-1,j], price[i]) == price[i] \n",
     "                        solution_actuelle[j] = []\n",
     "                        push!(solution_actuelle[j],i)\n",
     "                    end\n",
     "                else\n",
-    "# il faut prendre cet objet, on l'ajoute à la liste \n",
+    "# Cas 1.2: le poid de l'objet i est inférieur à la capacité maximale du sac\n",
+    "# Si on ne prend pas l'objet i, la solution ne change pas. Sinon on ajoute à la solution précedente l'objet i.\n",
     "                    if max(C[i-1,j], C[i-1,j-weight[i]] + price[i]) == C[i-1,j-weight[i]] + price[i] \n",
     "                        solution_actuelle[j] = deepcopy(solution_precedente[j-weight[i]])\n",
     "                        push!(solution_actuelle[j],i)\n",
@@ -138,10 +140,7 @@
     "            end\n",
     "        end\n",
     "        solution_precedente = deepcopy(solution_actuelle)\n",
-    "        #println(\"Vsolution_precedente :\",solution_precedente)\n",
     "    end\n",
-    "    \n",
-    "    #sol = C\n",
     "    sol = C[nbObjet,capacity]\n",
     "    \n",
     "    return sol,solution_actuelle[capacity]\n",
@@ -159,13 +158,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le code ci-dessous permet d'obtenir les résultats de l'algorithme pour différentes données. Il suffit de décommenter le nom des fichiers que nous voulons tester.   \n",
+    "Le code ci-dessous permet d'obtenir les résultats de l'algorithme pour différentes données. Il suffit de décommenter le nom des fichiers que nous voulons tester. \n",
+    "\n",
+    "L'algorithme renvoi la liste sol où sont énumérés le numéro des objets à prendre. \n",
     "Afin d'excuter cette cellule, il est nécessaire de récuperer les fichiers de tests donnés sur moodle."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -173,63 +174,63 @@
      "output_type": "stream",
      "text": [
       " _______________________     Test test.opb.txt    ______________________\n",
-      "  0.176712 seconds (52.55 k allocations: 3.064 MiB, 99.85% compilation time)\n",
+      "  0.466096 seconds (235.74 k allocations: 13.616 MiB, 99.84% compilation time)\n",
       "\n",
       " MAXIMUM = 65.0\n",
       " solution = Any[2, 4]\n",
       "\n",
       "\n",
       " _______________________     Test almost_strongly_correlated/knapPI_5_50_1000_1_-2096.opb.txt    ______________________\n",
-      "  0.236327 seconds (815.82 k allocations: 45.527 MiB, 6.35% gc time)\n",
+      "  0.275306 seconds (816.14 k allocations: 45.548 MiB, 5.44% gc time, 6.59% compilation time)\n",
       "\n",
       " MAXIMUM = 2096.0\n",
       " solution = Any[7, 11, 14, 24, 26, 36, 37, 38, 39, 45, 49]\n",
       "\n",
       "\n",
       " _______________________     Test circle/knapPI_16_20_1000_1_-2291.opb.txt    ______________________\n",
-      "  0.075739 seconds (283.25 k allocations: 15.792 MiB)\n",
+      "  0.076145 seconds (283.25 k allocations: 15.792 MiB, 15.23% gc time)\n",
       "\n",
       " MAXIMUM = 2291.0\n",
       " solution = Any[3, 6, 15, 17]\n",
       "\n",
       "\n",
       " _______________________     Test inverse_strongly_correlated/knapPI_4_50_1000_1_-994.opb.txt    ______________________\n",
-      "  0.222095 seconds (736.37 k allocations: 38.708 MiB, 6.47% gc time)\n",
+      "  0.226400 seconds (736.37 k allocations: 38.708 MiB)\n",
       "\n",
       " MAXIMUM = 994.0\n",
       " solution = Any[38]\n",
       "\n",
       "\n",
       " _______________________     Test profit_ceiling/knapPI_15_20_1000_5_-969.opb.txt    ______________________\n",
-      "  0.412179 seconds (1.47 M allocations: 84.440 MiB, 4.04% gc time)\n",
+      "  0.467568 seconds (1.47 M allocations: 84.440 MiB, 4.72% gc time)\n",
       "\n",
       " MAXIMUM = 981.0\n",
       " solution = Any[1, 15, 27, 47, 52, 64, 69, 75, 90, 91, 93, 100]\n",
       "\n",
       "\n",
       " _______________________     Test similar_weights/knapPI_9_50_1000_1_-995.opb.txt    ______________________\n",
-      " 17.705325 seconds (50.68 M allocations: 2.442 GiB, 6.70% gc time)\n",
+      " 18.353596 seconds (50.68 M allocations: 2.442 GiB, 11.50% gc time)\n",
       "\n",
       " MAXIMUM = 995.0\n",
       " solution = Any[29]\n",
       "\n",
       "\n",
       " _______________________     Test strongly_correlated/knapPI_3_50_1000_1_-1894.opb.txt    ______________________\n",
-      "  0.180415 seconds (761.49 k allocations: 43.078 MiB, 8.04% gc time)\n",
+      "  0.130583 seconds (761.49 k allocations: 43.078 MiB)\n",
       "\n",
       " MAXIMUM = 1894.0\n",
       " solution = Any[2, 13, 20, 21, 25, 27, 30, 44, 47]\n",
       "\n",
       "\n",
       " _______________________     Test subset_sum/knapPI_6_50_1000_1_-994.opb.txt    ______________________\n",
-      "  0.167092 seconds (772.47 k allocations: 42.687 MiB)\n",
+      "  0.212618 seconds (772.47 k allocations: 42.687 MiB, 3.27% gc time)\n",
       "\n",
       " MAXIMUM = 994.0\n",
       " solution = Any[13, 21, 25, 44, 47, 50]\n",
       "\n",
       "\n",
       " _______________________     Test uncorrelated/knapPI_1_50_10000_1_-68946.opb.txt    ______________________\n",
-      "  1.813808 seconds (9.36 M allocations: 363.467 MiB, 4.12% gc time)\n",
+      "  2.166084 seconds (9.36 M allocations: 363.467 MiB, 3.82% gc time)\n",
       "\n",
       " MAXIMUM = 68946.0\n",
       " solution = Any[1, 5, 11, 13, 19, 24, 26, 30, 33, 37, 48]\n",
