--- a/TP4_RO.ipynb
+++ b/TP4_RO.ipynb
@@ -75,7 +75,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "L’algorithme ci-dessous permet de résoudre le problème du sac à dos avec une programmation dynamique."
+    "L’algorithme ci-dessous permet de résoudre le problème du sac à dos en utilisant la **programmation dynamique**.\n",
+    "En effet, chaque étape correspond à un **sous-problème résolu optimalement**.\n",
+    "Les commentaires permettent d'expliquer plus en détail les différentes étapes de cet algorithme."
    ]
   },
   {
@@ -136,6 +138,7 @@
     "                    C[i,j] = max(C[i-1,j], C[i-1,j-weight[i]] + price[i])\n",
     "                end\n",
     "            else\n",
+    "# Cas 2: l'objet ne peut pas rentrer dans le sac\n",
     "                C[i,j] = C[i-1,j]\n",
     "            end\n",
     "        end\n",
@@ -151,6 +154,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Nous aurions pu remplacer le tableau C, de dimension (nbObjet,capacity) par deux vecteurs: un contenant les valeurs précedentes et un autre avec les valeurs actuelles. \n",
+    "Cette amélioration **ne change rien à l'algorithme mais aurait permis d'économiser de la mémoire**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Analyse des résultats"
    ]
   },
@@ -158,10 +169,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le code ci-dessous permet d'obtenir les résultats de l'algorithme pour différentes données. Il suffit de décommenter le nom des fichiers que nous voulons tester. \n",
+    "Le code ci-dessous permet d'obtenir les **résultats** de l'algorithme pour **différentes données**. Il suffit de décommenter le nom des fichiers que nous voulons tester (**et de les récuperer au préalable sur moodle**). \n",
     "\n",
-    "L'algorithme renvoi la liste sol où sont énumérés le numéro des objets à prendre. \n",
-    "Afin d'excuter cette cellule, il est nécessaire de récuperer les fichiers de tests donnés sur moodle."
+    "L'algorithme renvoi la liste sol où sont énumérés le **numéro des objets à prendre**. \n",
+    "La solution s'en déduit directement en remplaçant les indices du vecteur sol par un 1 dans un vecteur nul ( de taille égale au nombre d'objet). \n",
+    "Nous avons choisis de représenter la solution ainsi car ce vecteur est plus visuel, et il est plus facile de comparer les résultats avec le TP précedent. \n",
+    "\n",
+    "D'un coté, les **résultats sont cohérents** et l'algorithme est **plus simple à implanté** que celui du TP précedent. \n",
+    "En revanche, cet algorithme nécessite en géneral **plus d'itérations** pour trouver la solution ce qui engendre un **temps d'éxecution est supérieur**. De plus, de nombreuses solutions existent pour optmiser la stratégie d'exploration des noeuds pour le BAB et nous avons vu que des solveurs performant n'avaient besoin que d'une ou deux itérations pour résoudre le problème du sac à dos. En revanche, il est **plus difficile d'optimiser cet algorithme dynamique**, puisque le nombre d'itération est fixé (en fonction de la capacité).\n"
    ]
   },
   {
@@ -246,7 +261,6 @@
     "\"inverse_strongly_correlated/knapPI_4_50_1000_1_-994.opb.txt\",\"profit_ceiling/knapPI_15_20_1000_5_-969.opb.txt\",\"similar_weights/knapPI_9_50_1000_1_-995.opb.txt\",\n",
     "\"strongly_correlated/knapPI_3_50_1000_1_-1894.opb.txt\",\"subset_sum/knapPI_6_50_1000_1_-994.opb.txt\",\"uncorrelated/knapPI_1_50_10000_1_-68946.opb.txt\"] \n",
     "\n",
-    "\n",
     "for t in test\n",
     "    price, weight, capacity = readKnaptxtInstance(\"instancesETU/KNAPnewformat/\"*t)\n",
     "\n",
@@ -265,12 +279,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Résolution du problème du voyageur"
+    "# Résolution du problème du voyageur"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Le code ci-dessous permet de résoudre le **problème du voyageur** en utilisant l’algorithme de **Bellman-Ford** vu en cours, permettant de calculer le plus court chemin entre un sommet source s et tous les autres sommets d’un graphe quelconque.\n",
+    "\n",
+    "Les commentaires permettent d'expliquer en détail les différentes étapes du codes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -279,26 +302,25 @@
        "bellman_ford (generic function with 1 method)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "function bellman_ford(Mat,ptsDebut,ptsFinal)\n",
-    "    # initialisation vecteur solution \n",
+    "# Initialisation vecteur solution \n",
     "    taille = size(Mat, 1)\n",
     "    Sol = zeros(size(Mat, 1)) .+ Inf\n",
     "    Sol[ptsDebut] = 0\n",
-    "    # Chemin associer au vecteur solution\n",
+    "# Chemin associé au vecteur solution\n",
     "    Chemin = zeros(taille)\n",
-    "\n",
-    "    #Sommet à exploré\n",
+    "# Sommet à explorer\n",
     "    explo = ptsDebut\n",
     "\n",
-    "    #On s'arrete quand on a un chemin qui va au point finale (le chemin pour aller à F != Inf)\n",
-    "    while Sol[ptsFinal] == Inf \n",
-    "        #On itére sur tout les sommets accèssible depuis le sommet à explorer\n",
+    "# On s'arrete quand on a exploré toutes les solutions et qu'on arrive au point final\n",
+    "    while explo != ptsFinal \n",
+    "# On itère sur tous les sommets accessibles depuis le sommet à explorer\n",
     "        for i in 1:taille\n",
     "            if i != explo\n",
     "                minimum = min(Sol[explo] + Mat[explo,i], Sol[i])\n",
@@ -306,21 +328,15 @@
     "                    Chemin[i] = explo\n",
     "                end\n",
     "                Sol[i] = minimum\n",
-    "            end\n",
-    "            \n",
+    "            end  \n",
     "        end\n",
-    "\n",
-    "        #On change le sommet à explorer\n",
+    "# On change le sommet à explorer\n",
     "        explo = (explo + 1)\n",
-    "        if explo%taille == 0\n",
-    "            explo = explo % taille + 1\n",
-    "        end\n",
     "    end\n",
     "\n",
-    "\n",
-    "    #Remonter pour connaitre le chemin\n",
+    "# Remonter pour connaitre le chemin\n",
     "    Chemin = Int.(Chemin)\n",
-    "    explo = Chemin[ptsFinal] #point finale\n",
+    "    explo = Chemin[ptsFinal] \n",
     "    CheminStr = string(ptsFinal)\n",
     "    while explo != 0\n",
     "        CheminStr = string(explo, \" -> \",CheminStr )\n",
@@ -331,18 +347,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La cellule ci-dessous permet de **tester l'algorithme** de Bellman Ford avec les données du cours.\n",
+    "Les lettres sont remplacées par des nombres suivant l'ordre alphabétique."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Coût du chemin :\n",
-      "12.0\n",
+      "d2d3Coût du chemin :\n",
+      "7.0\n",
       "Chemin a prendre:\n",
-      "1 -> 2 -> 3 -> 4 -> 6\n"
+      "1 -> 2 -> 3\n"
      ]
     }
    ],
@@ -367,9 +391,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Amélioration possible:  \n",
-    "On pourrait améliorer la robustesse par exemple vérifier qu'il y a bien un chemin qui mène au point finale.  \n",
-    "On s'arrete quand la valeur pour arriver au point d'arriver n'est plus infinie. Cependant, rien ne garantie que se soit la meilleur.  "
+    "### Amélioration possible:  \n",
+    "\n",
+    "Afin d'améliorer la robustesse, nous **pourrions vérifier qu'il existe bien un chemin solution** qui mène au point final.\n",
+    "De plus, la boucle while, qui part du point de départ et itère jusqu'au point d'arrivé **nécessite que les points soient dans l'ordre croissant** et que le point d'arrivé est le plus grand. Cette contrainte peut-être satisafaite en pratique et permet de faciliter l'implantation de l'algorithme."
    ]
   }
  ],
